# omelkonian.github.io

./: .gitignore  .travis.yml  Colors.hs  Makefile  Utils.hs  cabal.project.freeze  cv.html  deploy.sh  index.html  keybase.txt  portfolio.cabal  site.hs  stack.yaml
.github/workflows/: ci.yml
assets/css/: main.css
assets/js/: main.js
coffeescript/: main.coffee  test.coffee
css/: carousel.css  default.css  main.css  main.hs  responsive.css  timeline.css
css/lib/: bootstrap-glyphicons.css  bootstrap.min.css  (+6 more)
cv/: index.html
data/: career.json  frameworks.csv  languages.csv  projects.json  publications.json  reports.json  typesetting.csv
dearest_one/: index.html
household/: index.html
javascript/: main.js
js/: background.coffee  background.js  career.coffee  career.js  interests.coffee  interests.js  main.js  projects.coffee  projects.js  publications.coffee  publications.js  reports.coffee  reports.js  skills.coffee  skills.js
pub_d3/: index.html
pub_rhea/: index.html
report-numbers/: api.html  authors.html  changes.html  contributing.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
sections/: 1-banner.html  2-projects.html  2-projects.markdown  2a-projects.html  2b-publications.html  3-interests.html  3-skills.html  3-skills.markdown  4-career.html  4-contact.html  4-skills.html  5-career.html  5-contact.html  5-skills.html  6-grades.html  7-contact.html  test.markdown
templates/: default.html  section-list.html  section.html
thesis/: index.html
(+80 files in other folders)
