name:               portfolio
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.1.0

library
  build-depends:    base     == 4.*
                  , hakyll   == 4.15.1.1
                  , clay     == 0.14.*
                  , text     == 2.*
                  , filepath == 1.4.*
                  , http-client-tls == 0.3.6.1
                  , xml-conduit == 1.9.1.1
  default-language: Haskell2010

executable site
  main-is: site.hs
  other-modules: Colors, Utils

-- ** CSS generation

executable main
  main-is: css/main.hs
  other-modules: Colors, Utils

executable banner
  main-is: css/sections/banner.hs
  other-modules: Colors, Utils

executable career
  main-is: css/sections/career.hs
  other-modules: Colors, Utils

executable contact
  main-is: css/sections/contact.hs
  other-modules: Colors, Utils

executable grades
  main-is: css/sections/grades.hs
  other-modules: Colors, Utils

executable interests
  main-is: css/sections/interests.hs
  other-modules: Colors, Utils

executable projects
  main-is: css/sections/projects.hs
  other-modules: Colors, Utils

executable publications
  main-is: css/sections/publications.hs
  other-modules: Colors, Utils

executable skills
  main-is: css/sections/skills.hs
  other-modules: Colors, Utils
